Compilador_Final/tests/invalid/test_e02_mover_sin_despegar.drone
// Test con error 2: mover sin haber despegado (error semántico)
drone tierra;

mision sin_despegar {
    mover tierra adelante 10;
    aterrizar tierra;
}
